--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation("com.google.code.gson:gson:2.8.6")
+    implementation("androidx.activity:activity-ktx:1.2.3")
+    implementation("android.arch.lifecycle:extensions:1.1.1")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
